--- a/backend/sabortech/src/main/resources/application.properties
+++ b/backend/sabortech/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+spring.jpa.hibernate.ddl-auto=update
 spring.application.name=sabortech
 server.port=8080
-spring.jpa.hibernate.ddl-auto=update
-spring.config.import=optional:file:.env[.properties]
+
+
+spring.config.import=optional:file:./.env
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.devtools.add-properties=false
+logging.level.org.springframework.security=DEBUG
