--- a/backend/sabortech/src/main/resources/application.properties
+++ b/backend/sabortech/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+
 spring.application.name=sabortech
 server.port=8080
 
@@ -7,5 +7,9 @@ spring.config.import=optional:file:./.env
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.devtools.add-properties=false
-logging.level.org.springframework.security=DEBUG
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
