--- a/backend/sabortech/src/main/resources/application.properties
+++ b/backend/sabortech/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.web.resources.static-locations=classpath:/static/
